# lucid-music

./: .gitignore  build-profile.json5  build_log2.txt  check_path.js  check_realpath.js  dbg.js  dbg2.js  oh-package-lock.json5  oh-package.json5  ohpm_install.bat  ohpm_log.txt  run_build.bat  实现细节文档.md  架构与思路文档.md
.codebuddy/memory/: 2025-07-16.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  MEMORY.md
.codebuddy/plans/: MusicHall官方渐变模糊_1417b525.md  MusicHall顶部渐变模糊_ebc70a24.md  add-music-list-page_55870243.md  add-settings-page_7badfcb8.md  audiosource-real-integration_2e72d95f.md  audiosource-real-integration_bf473665(未完成).md  background-task-keepalive_ee748608.md  centralize-playback-state-store_95e73291.md  cross-verify-crypto-outputs_36f4db2b.md  debug-and-fix-wy-eapi_40d70ef8.md  debug-netease-cover_305cc02a.md  direct-avsession-callbacks_9afaa9d5.md  extract-bottom-bars-to-index_daf0e005.md  fix-apis-from-lxmobile_f8c993ac.md  fix-arkts-untyped-obj-literals_dc64b3f5.md  fix-background-task-callback_8cf8ac78.md  (+119 more)
AppScope/: app.json5
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
js_audio_engine/: Index.ets  build-profile.json5  oh-package.json5
js_audio_engine/src/main/cpp/: CMakeLists.txt  jsvm_engine.cpp  jsvm_engine.h  lx_environment.cpp  lx_environment.h  lx_event_bus.cpp  lx_event_bus.h  lx_http_bridge.cpp  lx_http_bridge.h  lx_utils.cpp  lx_utils.h  napi_init.cpp  types.h
js_audio_engine/src/main/cpp/types/libjsaudioengine/: Index.d.ts  oh-package.json5
(+213 files in other folders)
